# tt-matmul

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
kernels/compute/: mm.cpp
kernels/dataflow/: reader_single_core_mm.cpp  writer_single_core_mm.cpp
scripts/: koyeb_build.sh  koyeb_run.sh  run_from_api.sh
src/: main.cpp
